<resources>
    <string name="app_name">ConstaFlux</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="url">URL</string>
    <string name="mini">Mini</string>
    <string name="flux">flux</string>
    <string name="title_activity_Host_application">HostApplicationActivity</string>
    <string name="title_activity_login_application">LoginApplicationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="all">All</string>
    <string name="starred">Starred</string>
    <string name="feeds">Feeds</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="no_connectivity_error">There is no connectivity! Check your wifi.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="there_are_no_read_articles">There are no read articles.</string>
    <string name="there_are_no_unread_articles">There are no unread articles.</string>
    <string name="there_are_no_starred_read_articles">There are no starred read articles.</string>
    <string name="there_are_no_starred_unread_articles">There are no starred unread articles.</string>
    <string name="star_article">Star article</string>
    <string name="un_star_article">Un-star article</string>
    <string name="search_article">Search article</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="share_article">Share article</string>
    <string name="loading_data_for_first_use">Loading data for first use.</string>
    <string name="this_will_only_take_a_minute">This will only take a minute</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="search_entries">Search entries</string>
    <string name="create_category">Create category</string>
    <string name="title">Title:</string>
    <string name="enter_title">(E.g.): News</string>
    <string name="update_category">Update category</string>
    <string name="delete_category">Delete category</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="create_feed">Create feed</string>
    <string name="update_feed">Update feed</string>
    <string name="url_create">URL:</string>
    <string name="enter_site_url">(E.g.): http://www.example.com/</string>
    <string name="enter_feed_url">(E.g.): http://www.example.com/rss</string>
    <string name="category">Category:</string>
    <string name="fetch_feed_original_content">Fetch original content</string>
    <string name="override_default_user_agent">Override Default User Agent:</string>
    <string name="feed_username">Feed Username:</string>
    <string name="feed_password">Feed Password:</string>
    <string name="enter_feed_password">(E.g.): secret password</string>
    <string name="enter_feed_username">(E.g.): example_user</string>
    <string name="enter_user_agent">(E.g.): Mozilla/5.0 (compatible; Miniflux/2.0.17; +https://miniflux.app)</string>
    <string name="show_advanced_options">Show Advanced Options</string>
    <string name="delete_feed">Delete feed</string>
    <string name="hide_advanced_options">Hide advanced options</string>
    <string name="create">CREATE</string>
    <string name="update">UPDATE</string>
    <string name="delete_question">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="scraper_rules">Scraper Rules:</string>
    <string name="rewrite_rules">Rewrite rules:</string>
    <string name="site_url">Site URL:</string>
    <string name="feed_url">Feed URL:</string>
    <string name="last_check">Last check:</string>
    <string name="cezar_begu">Cezar Begu</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="user_account">User account</string>
    <string name="change_username">Change username</string>
    <string name="change_password">Change password</string>
    <string name="data_management">Data management</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="clear_fetched_data">Clear fetched entries</string>
    <string name="theme">Theme</string>
    <string name="update_username">Update username</string>
    <string name="re_enter_password">Re-enter new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="logoutPrompt">Are you sure that you want to logout?</string>
    <string name="no_articles_found">No articles found</string>
    <string name="fetch_original">Fetch original</string>
    <string name="undo_fetch_original">Undo fetch original</string>
    <string name="no_content">No content.</string>
    <string name="e_g_example">(E.g.): Example</string>
    <string name="e_g_div_articlebody">(E.g.): div#articleBody</string>
    <string name="e_g_add_dynamic_image">(E.g.): add_dynamic_image</string>

    <string name="body_mark_all">%1$d items will be marked.</string>
    <string name="article_scroll_bar">Article scroll bar </string>
    <string name="select_all">Select all</string>
    <string name="accept">Accept</string>

    <string-array name="fab_article_action">
        <item>selection</item>
        <item>mark as read</item>
    </string-array>


    <string-array name="long_press_article_action">
        <item>star</item>
        <item>selection</item>
    </string-array>

</resources>
