<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_all_articles"
            android:title="@string/all" />
    <item
            android:id="@+id/nav_starred"
            android:icon="@drawable/ic_star"
            android:title="@string/starred" />
    <item
            android:id="@+id/nav_feeds"
            android:icon="@drawable/ic_rss_feed"
            android:title="@string/feeds" />
    <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/categories" />
    <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
</menu>